ch06_3 survey  page  에 sub-component 인 user demographic  table 구현
survey page 에 제품 rating 에 대한 view 를 구현하기 전에  우선 사용자 정보 (demograpic) 에 대한 table 화면을 구현한다. 해당 table 은 survey_live 에서 구현된 것이 아니라 demograpic_live/component.ex 에서 구현된 하위 component 를  survey_live 가 부모 component 로써, 가져오는 것이다.

app.html.heex
 -  본 구현 진행 전 기본 LiveView application templete 에서 제공되는 link list 를 모두 삭제

router.ex
 -  Authenticated user 에 대해  `"/survey"` url LiveView 경로 추가

 survey_live.ex
 - mount/3 : socket 을 mounting 하는데 해당 view 에서는 로그인 user 의 demographic 정보도 assign 에 추가되어야 한다. 따라서 이전에 구현한 user_id 로 demographic 정보를 가져오는   `Survey.get_demographic_by_user/1` 함수를 사용하여 이를 포함시킨다.

survey_live.html.heex
 1.  사용자 정의 sub-compoenent 적용의 간단한 구현
      * survey_live/component.ex
         `attr` - 부모 compoenent 에서 제공하는 속성 값을 받을 이름, type, 필수 요소 여부 등을 정의
         `slot`  - 해당 component tag 사이 `<ComponentModule.function_component> slot 공간 </ComponentModule.function_component> ` slot 공간에 명시되는 내용을 받음.  해당 구현에서  `:inner_block` atom 명칭으로 정의되어, 이를 해당 component 에서 바로 render_slot 의 인자로 넘김 (`render_slot(@inner_block)`). 따라서 부모 component 에서 slot 공간에 명시한 text 가 화면에 보여질 수 있도록 됨.
          `def hero(assigns) do ... end` - 해당 component 에서 구현할 rendering code 를 작성

      ->   부모 component 에서
```
<ComponentModule.fuction_component attr1="value1", attr2="{1+2}">
    slot contents
  </ComponentModule.fuction_component>
```
            와 같은 형태로 사용

 2.  sub-component - `demographic_live/show.ex` 사용
      * `survey_live.ex` 에서 user demographic 정보를 assigns 에 넣었다. 이를 이용하여 해당 정보  view table 을 구현.  바로 `survey_live.html.heex` 에서 구현할 수 있지만,  관련  data 별로 component 를 구성하고, 이를 하위 요소로 가져와서 쓴것이, 재사용성이나, 구조의 일관성, 가독성 측면에서 이렇게 구현하는 것이 유리함.  따라서 부모 compenent 에서는 해당 component 를 tag 내에서 가져오고 이 때 자식 component 가 필요한 attribute(`demograpic`) 을 전달한다.

--- a/lib/pento1_web/components/layouts/root.html.heex
+++ b/lib/pento1_web/components/layouts/root.html.heex
@@ -17,12 +17,29 @@
         <li class="text-[0.8125rem] leading-6 text-zinc-900">
           <%= @current_user.email %>
         </li>
-        <li>
+                <li>
           <.link
             href={~p"/users/settings"}
             class="text-[0.8125rem] leading-6 text-zinc-900 font-semibold hover:text-zinc-700"
           >
             Settings
+          </.link>
+        </li>
+
+        <li>
+          <.link
+            href={~p"/products"}
+            class="text-[0.8125rem] leading-6 text-zinc-900 font-semibold hover:text-zinc-700"
+          >
+            Products
+          </.link>
+        </li>
+        <li>
+          <.link
+            href={~p"/survey"}
+            class="text-[0.8125rem] leading-6 text-zinc-900 font-semibold hover:text-zinc-700"
+          >
+            Survey
           </.link>
         </li>
         <li>
