ch07_1 상태를 가진 sub-component (demographic 신규 등록) 구현
이전의 sub-component 의 경우, 부모 compoenent 를 생성할 때  의존성 data 를 preload 하여 assigns 에 해당값을 가지고 있다가 sub-component render  attribute 로 넘겨 주기만 했다.
이번에 구현되는 demographic  form component 는 사용자가 form 양식에 data 를 제출하면 이를 부모 component 로 보내지 않고, 자체적으로  data 를 저장하는 기능을 구현하였다.

survey_live.html.heex
 - 앞으로 구현할 자식 component `demographic_live/form.ex` 를 사용하고 여기에서 사용할 attribute `current_user` 정보를 넘겨 준다.

survey_live.ex
 - `handle_info/2` & `handle_demographic_create/2`
   밑에서 언급할  자식 component 에서 event 는 처리(영속성 작업)할 것이지만, 부모 component 가 관리하는 assgin 값을 수정해 주어야,  클릭이후 정상적으로 새로 입력된 demographic table 이 보여지는 `show.ex` component 로 전환 처리가 가능하다.   자식의 form compent 의 `submit` event 는 한번만 발생하는데 영속성 작업을 위해 이를 자식 componet 에서 받았으므로, 결국 부모 component 에서 handle_event/3 처리가 불가능해진다. 그래서  이를 해결하고자 (약간 복잡해지지만) 자식 component 에서 event 를 처리할 때 이를 통신  message 로 `send(self() ...)` 한다. self() 는 곧 부모 component 의 PID 이므로 이 정보를  handle_info 에서 `{:created_demographic, demographic}` key pair 로 매창하여 받을 수 있게 된다.

demographic_live/form.html.heex
 - sub-component 의 render form 구현
 - 주어진 항목 중 `Gender` 와 `Year of Birth`를 선택하고 `save` 를 누르면 해당 handle_event/3 가 호출되어 처리
 - 그런데 해당 view 는 부모 component 를 바탕으로 자식 component 로써 구현되었기 때문에 특별한 언급이 없으면 부모 component  `handle_event("save", ....)` 에서 이를 처리하게 된다. 이를 막고  자식 component 내에서  처리되도록 `phx-target={@myself}` attribute 를 설정한다.

demographic_live/form.ex
1.  `update/2` & `assign_demographic/1` & `assign_form/2` & `clear_form/1`
  - 자식 component 이므로 mount/1 callback 구현은 필요 없다. 대신 주어진 해당 assign  변경에 따른 rendering 을 수정해 줄 수 있도록 update/2 만  구현한다.
  - assign  key 로 `:demographic` 를 추가하고, 그 중 `%Demographic{:user_id}` 는  부모 compoenent 가 제공하는 current_user.id 값을 매칭시킨다.
  - 추가로 `<.form>` tag 로부터 사용자 입력 정보를 받았을 때, 이를 changeset 으로 유효성 검토를 하고,  form assgin 으로 변환,  data 를 전달 할 수 있게 해준다.

  2. `handle_event/3` & `save_demographic/2` & `params_with_user_id/2`
  - `<.simple_form>` tag 내 버튼 클릭에 의한 `phx-submit="save"` event 를 받는다.
  - user_id 정보를 추가한다.
  - 

--- a/lib/pento1_web/live/survey_live.html.heex
+++ b/lib/pento1_web/live/survey_live.html.heex
@@ -3,8 +3,13 @@
 </Component.hero>
 <%= if @demographic do %>
   <DemographicLive.Show.details demographic={@demographic}/>
+  <hr />
+  <br/>
 <% else %>
-  <h2>Demographic From coming soon!</h2>
+  <.live_component module={DemographicLive.Form}
+    id="demographic-form"
+    current_user={@current_user}
+  />
 <% end %>
 
 <%!-- 
