ch07_2 statefue sub-component (Rating) 평가 data 불러오기 및 user input  저장 구현
이전 단계에서 구현된  sub-component 를 통해 사용자가 demographic 정보를 입력한 이후,  해당 정보 보기와 함께 상품들에 대한 평가를 할수 있도록 구현한다. 이는 `Rating` sub-component 로 구현되며, 현재 등록된 모든 상품을 불러와서 이에 대한 평가 (1~5) 를 매길 수 있으며,  이미 평가된 상품은 기존에 본인이 평가한 점수를 볼 수 있다.

현 단계에서 input data 의 영속성 작업은 구현되지 않았고, 우선 관련 view 만 구현된다.

  survey_live.ex
 - 부모 component 에서 모든 상품 정보 + 이전에 user 가 평가한 rating 을 가져와서 assign 에 포함시킨다.
 - 해당 작업은 mount/3 단계 즉 최초 1회만 작업이 필요하며, 이후 update 사항은 자식 component 에서 변화된 값에 대해서만 처리하게 된다.

survey_live.html.heex
 - 자식 component `RatingLive.Index` 내 함수 `product_list` 가 표현될 위치에 필요한 attribute (`products`, 'current_user') 를 전달한다.

rating_live/index.ex
 `product_list/1` :  내부 renderin 함수 구성 및 부모 component 로 부터 받은 attribute 를 전달
 `heading/` & `rating_complete?/1` :  단순히 Rating 글자를 표시하고 , 그 옆에 모든 상품에 대한 평가를  했는지 여부 (했다면 ✓, 아니면 아무 표시 없음) 표시
 `product_rating.1` :  상품명과 평점 (아직 평가하지 않았다면 평가 input drop down button) 표시.
                                       기 입력된 평가 표시 ->  `rating_live/show.ex`
                                       별점 입력  -> `rating_live/form.ex`

rating_live/show.ex
 - 전달 받은 rating 점수를 가지고 1~5 점까지 별로 표시

rating_live/form.ex
 - 해당 구현에서는 사용자 평가 점수를 받아 해당 state 가 저장되도록 작업해야 한다. (다음 commit 에서 구현 예정) 따라서, form 입력 data 유효성 평가를 하고, assign 에 추가하는 처리가 update/2 callback 에서 작업되도록 구현한다.

rating_live.form.html.heex
 -  별점 입력을 받을 수 있도록 form 내부에 <.input> tag 를 사용하여 구현한다. 다만, 여기에서 사용될 형태 `.input` component 는 Phoenix LiveView 에서 기본으로 제공하는 core_component 에는 존재하지 않는다.

 core_component.ex
 - 따라서 여기에 custom  `.input` component 를 직접 구현한다. `%{type: "rating"} = assigns` 로 해당 type 의 `<.input>` tag 호출 시 이를 사용할 수 있도록 구현.
 - 구현 heex 파일에서  `options={[key:, value]}` 형태로 구현하면, 화면상 key 들이 dropdown menu 로 나타나며,  이중 하나를 선택하면, 해당 key 해당하는 value 값을 event 로 전달된다.

--- a/lib/pento1_web/live/survey_live.html.heex
+++ b/lib/pento1_web/live/survey_live.html.heex
@@ -5,6 +5,8 @@
   <DemographicLive.Show.details demographic={@demographic}/>
   <hr />
   <br/>
+  <RatingLive.Index.product_list products={@products}
+    current_user={@current_user}/>
 <% else %>
   <.live_component module={DemographicLive.Form}
     id="demographic-form"
