ch08_1 평점 모니터링 page (admin view) 구현을 위한 기본 페이지 생성 및 query 생성 구현
해당 chapter 에서는 사용자들이 상품별로 점수를 매긴 것을 토대로 각 상품의 평균 점수를 볼 수 있는 page 를 구성한다.
이번 commit 에서는 이에 필요한 view 를 기본 생성하고 상품별 평균 점수를 가져오는  query 함수를 구현한다.

router.ex
 - 사용자 인증 후 접속 가능하도록`live  "/admin/dashboard", Admin.DashboardLive`  추가

root.html.heex
 - 최상단 메뉴에 `Dashboard` 추가 및 해당 경로 추가

admin/dashboard_live.ex
 - 관리자 page live 생성
 -  자식 component 인 `survey_results_live` 에 attribute 를 전달 할 수 있도록 해당 key-value assign

  admin/dashboard_live.html.heex
 - SurveyResultsLive Component  및 여기에서 필요한 attribute 추가

admin/survey_results_live.ex & admin/survey_results_live.html.heex
 - 내용 없이 module 만 생성

product/query.ex
 - 앞으로 admin live 에서 사용할 상품 정보를 가져올 query 를 작성하는데,  상품별로 rating record 를 정리한 이후, 각 상품의 평점 평균을 계산해야 한다. 이를 query 요청으로 처리할 수 있으며 관련 구현 함수를 구현함. (함수의 상세 구현 내용은 code 내 주석 참조 요망)

catalog.ex
 - 앞에서 구현한 qurey 를 실행하고 이에 대한 실제 data 를 가져올 Repo 를 실행시키는 함수를 해당 context 에서 구현.

--- a/lib/pento1_web/components/layouts/root.html.heex
+++ b/lib/pento1_web/components/layouts/root.html.heex
@@ -44,6 +44,14 @@
         </li>
         <li>
           <.link
+            href={~p"/admin/dashboard"}
+            class="text-[0.8125rem] leading-6 text-zinc-900 font-semibold hover:text-zinc-700"
+          >
+            Dashboard
+          </.link>
+        </li>
+        <li>
+          <.link
             href={~p"/users/log_out"}
             method="delete"
             class="text-[0.8125rem] leading-6 text-zinc-900 font-semibold hover:text-zinc-700"
