ch08_2 dashboard Contex 를 사용하여 그래프 넣기
Contex  library  를 사용하여  앞에서 작업한 상품별 별점 평균 값을 그래프로 그린다.

mix.exs
 - Contex 의존성 추가 후 `mix deps.get`

admin/survey_results_live.ex
 - 그래프를 그리는데 필요한 설정값들을 assign 에 추가

  1. SVG chart 생성을 위한 Contex.Dataset 구현 reducer
      - 앞에서 작업한 상품별 별점 평균 (`:product_with_average_ratings`) 에 대한 값을 받아서  `Contex.Dataset` 의 값으로 넣어서 그래프를 그릴 수 있는 `dataset` 을 생성하고, 이를 assign 에 할당한다.

  2. bar chart 를 그리기 위한 data 로  변환 reducer
      - `dataset` assgin 을 받아서 `Contex.BarChart` 생성 data 값으로 넣어 주고, 이를 또다시 assign 에 `:chart` key-value를 할당한다.

  3. Chart SVG 설정 및 실제 SVG 생성 reducer
      - `:chart` 값을 받아서 , chart 제목, 소제목,  x-축 범례,  y-축 범례,  그래프 크기를 모두 설정하여 SVG 를 생성, 이를 assign `:chart_svg` 값으로 할당하여 전달한다.

admin/survey_results_live.html.heex
 - `survey_results_live.ex` 에서 모든 data 를 생성 및 SVG 를 그려서  assgin 에 할당한 값을  `<%= @chart_svg %>` 로 불러와서 redering 진행.

assets/css/app.css
 - plot 구현에 필요한 css 추가

--- a/lib/pento1_web/live/admin/survey_results_live.html.heex
+++ b/lib/pento1_web/live/admin/survey_results_live.html.heex
@@ -1,3 +1,17 @@
 <section class="ml-8">
   <h2 class="font-light text-2xl">Survey Results</h2>
+  <div id="survey-results-component">
+    <%= @chart_svg %>>
+    <%!-- <div class="container my-4 mx-4 grid grid-cols-2">
+      <.form
+        for={%{}}
+        as={:gender_filter}
+        phx-change="gender_filter"
+        phx-target={@myself}
+        id="gender-form"
+      >
+        <>
+      </.form>
+    </div> --%>
+  </div>
 </section>
