--- a/lib/pento1_web/live/admin/dashboard_live.html.heex
+++ b/lib/pento1_web/live/admin/dashboard_live.html.heex
@@ -1,7 +1,10 @@
 <section class="row">
-  <h2 class="font-heavy text-3xl">Admin Dashboard</h2>
+  <h1 class="font-heavy text-3xl">Admin Dashboard</h1>
 </section>
 <.live_component
-  module={Pento1Web.Admin.SurveyResultsLive}
-  id={@survey_results_component_id}
-/>
+      module={Pento1Web.Admin.SurveyResultsLive}
+      id={@survey_results_component_id} />
+<.live_component
+  module={Pento1Web.Admin.UserActivityLive},
+  id={@user_activity_component_id} />
+
